# Brains-DegenDevil

./: Anchor.toml  README.md  package-lock.json  package.json
programs/degendevil/: Cargo.toml
programs/degendevil/src/: lib.rs  utils.rs
programs/degendevil/tests/: flip.rs  utils.rs
programs/degendevil/tests/fixtures/: id.json
programs/degenrand/: Cargo.toml
programs/degenrand/src/: lib.rs  utils.rs
scripts/: updateAdminAta.ts  updateBetAmount.ts  updateBetFee.ts
tests/: degendevil.ts  degenrand.ts  sessions.js  setup.ts  utils.ts
